Fix z-index position on autocomplete

--- a/public/css/modules/autocomplete.less
+++ b/public/css/modules/autocomplete.less
@@ -11,6 +11,7 @@
   font-size: 1rem;
   text-align: left;
   color: black;
+  z-index: 100;
 
   .suggestion {
     //@include transition(background-color 0.5s, color 0.5s);
